Modification du backgroud-color dans le body et des padding smartphone pour l'exercice

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		/* Styles de base */
 		body {
 			font-family: 'Bitter', serif;
-			background-color: #eef;
+			background-color: #000;
 			color: #259;
 		}
 		nav img {
@@ -45,10 +45,10 @@
 		@media (max-width: 768px) {
 		
 			nav [class *="col-xs"]{
-				padding-bottom:10px;
+				padding-bottom:15px;
 			}
 			footer{
-				padding-bottom:10px;
+				padding-bottom:15px;
 			}
 					
 		}
